--- a/views/change-password-success.jade
+++ b/views/change-password-success.jade
@@ -4,5 +4,5 @@ block content
   div.row
     div.col-md-4.col-md-offset-4.col-sm-6.col-sm-offset-3
       div.panel.panel-success
-        div.panel-heading Password changed
-        div.panel-body You have successfully changed your password.
+        div.panel-heading 密码已修改
+        div.panel-body 您的密码已成功修改
