--- a/views/get-forgot-password.jade
+++ b/views/get-forgot-password.jade
@@ -4,13 +4,13 @@ block content
   div.row
     div.col-md-4.col-md-offset-4.col-sm-6.col-sm-offset-3
       div.panel.panel-default
-        div.panel-heading Forgot password
+        div.panel-heading 忘记密码
         div.panel-body
           form(action="/forgot-password", method="POST", autocomplete="off")
             input(type="hidden", name="_csrf", value=_csrf)
             div.form-group
-              label(for="email") Email
-              input.form-control(type="email", id="email", name="email", placeholder="Your email")
+              label(for="email") 邮箱
+              input.form-control(type="email", id="email", name="email", placeholder="请输入您的邮箱地址")
             if error
               div.alert.alert-warning #{error}
-            input(type="submit", class="btn btn-primary btn-block", value="Send email")
+            input(type="submit", class="btn btn-primary btn-block", value="发送邮件")
