--- a/views/get-login.jade
+++ b/views/get-login.jade
@@ -4,18 +4,18 @@ block content
   div.row
     div.col-md-4.col-md-offset-4.col-sm-6.col-sm-offset-3
       div.panel.panel-default
-        div.panel-heading Login
+        div.panel-heading 登录
         div.panel-body
           form(action=action, method="POST", autocomplete="off")
             input(type="hidden", name="_csrf", value=_csrf)
             div.form-group
-              label(for="login") Email or Username
-              input.form-control(type="text", id="login", name="login", placeholder="Your email or username", value=login)
+              label(for="login") 邮箱
+              input.form-control(type="text", id="login", name="login", placeholder="请输入您的邮箱地址", value=login)
             div.form-group
-              label(for="password") Password
-              input.form-control(type="password", id="password", name="password", placeholder="Your password")
+              label(for="password") 密码
+              input.form-control(type="password", id="password", name="password", placeholder="请输入密码")
             if error
-              div.alert.alert-warning #{error}
-            input(type="submit", class="btn btn-primary btn-block", value="Login")
+              div.alert.alert-warning 邮箱或密码错误
+            input(type="submit", class="btn btn-primary btn-block", value="登录")
           div.text-center(style="margin-top: 15px;")
-            small: a(href="/forgot-password") Forgot Password?
+            small: a(href="/forgot-password") 忘记密码?
