--- a/views/get-logout.jade
+++ b/views/get-logout.jade
@@ -4,5 +4,5 @@ block content
   div.row
     div.col-md-4.col-md-offset-4.col-sm-6.col-sm-offset-3
       div.panel.panel-success
-        div.panel-heading Logout
-        div.panel-body You've successfully logged out.
+        div.panel-heading 登出
+        div.panel-body 您以成功登出
