--- a/views/get-new-password.jade
+++ b/views/get-new-password.jade
@@ -4,13 +4,13 @@ block content
   div.row
     div.col-md-4.col-md-offset-4.col-sm-6.col-sm-offset-3
       div.panel.panel-default
-        div.panel-heading Create a new password
+        div.panel-heading 创建新密码
         div.panel-body
           form(action="/forgot-password/#{token}", method="POST", autocomplete="off")
             input(type="hidden", name="_csrf", value=_csrf)
             div.form-group
-              label(for="password") Password
-              input.form-control(type="password", id="password", name="password", placeholder="New password")
+              label(for="password") 密码
+              input.form-control(type="password", id="password", name="password", placeholder="请输入新密码")
             if error
               div.alert.alert-warning #{error}
-            input(type="submit", class="btn btn-primary btn-block", value="Submit")
+            input(type="submit", class="btn btn-primary btn-block", value="修改密码")
