--- a/views/get-signup.jade
+++ b/views/get-signup.jade
@@ -4,21 +4,21 @@ block content
   div.row
     div.col-md-4.col-md-offset-4.col-sm-6.col-sm-offset-3
       div.panel.panel-default
-        div.panel-heading Signup
+        div.panel-heading 注册
         div.panel-body
           form(action="/signup", method="POST", autocomplete="off")
             input(type="hidden", name="_csrf", value=_csrf)
+            input.form-control(type="hidden", id="name", name="name")
             div.form-group
-              label(for="name") Username
-              input.form-control(type="text", id="name", name="name", placeholder="Pick a username")
+              label(for="email") 邮箱
+              input.form-control(type="email", id="email", name="email", placeholder="请输入您的邮箱")
             div.form-group
-              label(for="email") Email
-              input.form-control(type="email", id="email", name="email", placeholder="Your email")
-            div.form-group
-              label(for="password") Password
-              input.form-control(type="password", id="password", name="password", placeholder="Create a password")
+              label(for="password") 密码
+              input.form-control(type="password", id="password", name="password", placeholder="设置您的密码")
             if error
-              div.alert.alert-warning #{error}
+              div.alert.alert-warning 您的邮箱已被占用
             input(type="submit", class="btn btn-primary btn-block", value="Signup")
           div.text-center(style="margin-top: 15px;")
-            small: a(href="/signup/resend-verification") Resend email
+            small: a(href="/signup/resend-verification") 重新发送认证邮件
+  script(type="text/javascript")
+    document.getElementById('name').value = Date.now() + Math.floor(Math.random() * 100000).toString();
