--- a/views/mail-verification-success.jade
+++ b/views/mail-verification-success.jade
@@ -4,5 +4,5 @@ block content
   div.row
     div.col-md-4.col-md-offset-4.col-sm-6.col-sm-offset-3
       div.panel.panel-success
-        div.panel-heading Signup
-        div.panel-body You can now use your credentials to <a href="/signin">signin</a>.
+        div.panel-heading 注册
+        div.panel-body 现在您可以<a href="/signin">登录</a>了
