--- a/views/post-forgot-password.jade
+++ b/views/post-forgot-password.jade
@@ -4,5 +4,5 @@ block content
   div.row
     div.col-md-4.col-md-offset-4.col-sm-6.col-sm-offset-3
       div.panel.panel-default
-        div.panel-heading Forgot password
-        div.panel-body Email with link for password reset sent.
+        div.panel-heading 忘记密码
+        div.panel-body 重置密码邮件已发送
