--- a/views/post-signup.jade
+++ b/views/post-signup.jade
@@ -4,5 +4,5 @@ block content
   div.row
     div.col-md-4.col-md-offset-4.col-sm-6.col-sm-offset-3
       div.panel.panel-success
-        div.panel-heading Signup
-        div.panel-body Email with verification link sent.
+        div.panel-heading 注册
+        div.panel-body 激活邮件已发送
