--- a/views/post-signup.jade
+++ b/views/post-signup.jade
@@ -5,4 +5,6 @@ block content
     div.col-md-4.col-md-offset-4.col-sm-6.col-sm-offset-3
       div.panel.panel-success
         div.panel-heading 注册
-        div.panel-body 激活邮件已发送
+        div.panel-body 激活邮件已发送，请登录邮箱查看
+  script(type="text/javascript")
+    setTimeout("window.close()", 3000);
