--- a/views/get-login.jade
+++ b/views/get-login.jade
@@ -18,4 +18,4 @@ block content
               div.alert.alert-warning 邮箱或密码错误
             input(type="submit", class="btn btn-primary btn-block", value="登录")
           div.text-center(style="margin-top: 15px;")
-            small: a(href="/forgot-password") 忘记密码?
+            small: a(href="/forgot-password") 忘记密码？
