--- a/views/mail-verification-success.jade
+++ b/views/mail-verification-success.jade
@@ -5,4 +5,6 @@ block content
     div.col-md-4.col-md-offset-4.col-sm-6.col-sm-offset-3
       div.panel.panel-success
         div.panel-heading 注册
-        div.panel-body 现在您可以<a href="/signin">登录</a>了
+        div.panel-body 账号已激活
+  script(type="text/javascript")
+    setTimeout('window.close()', 3000);
