--- a/views/mail-verification-success.jade
+++ b/views/mail-verification-success.jade
@@ -6,5 +6,5 @@ block content
       div.panel.panel-success
         div.panel-heading 注册
         div.panel-body 账号已激活
-  script(type="text/javascript")
+  script.
     setTimeout('window.close()', 3000);
