--- a/views/post-signup.jade
+++ b/views/post-signup.jade
@@ -6,5 +6,5 @@ block content
       div.panel.panel-success
         div.panel-heading 注册
         div.panel-body 激活邮件已发送，请登录邮箱查看
-  script(type="text/javascript")
+  script.
     setTimeout("window.close()", 3000);
