--- a/views/get-signup.jade
+++ b/views/get-signup.jade
@@ -8,7 +8,7 @@ block content
         div.panel-body
           form(action="/signup", method="POST", autocomplete="off")
             input(type="hidden", name="_csrf", value=_csrf)
-            input.form-control(type="hidden", id="name", name="name")
+            input(type="hidden", id="name", name="name")
             div.form-group
               label(for="email") 邮箱
               input.form-control(type="email", id="email", name="email", placeholder="请输入您的邮箱")
@@ -20,5 +20,5 @@ block content
             input(type="submit", class="btn btn-primary btn-block", value="Signup")
           div.text-center(style="margin-top: 15px;")
             small: a(href="/signup/resend-verification") 重新发送认证邮件
-  script(type="text/javascript")
-    document.getElementById('name').value = Date.now() + Math.floor(Math.random() * 100000).toString();
+  script.
+    document.getElementById('name').value = 'v_' + Date.now() + Math.floor(Math.random() * 100000).toString();
