--- a/views/authorize.jade
+++ b/views/authorize.jade
@@ -16,3 +16,5 @@ block content
               div.alert.alert-warning #{error}
             input(type="submit", class="btn btn-primary btn-block", value="同意")
             input(type="submit", class="btn btn-secondary btn-block", value="拒绝", name="cancel")
+            div.text-center(style="margin-top: 15px;")
+              small: a(href="/signout?redirect=back") 使用其他账号？
