--- a/views/get-signup.jade
+++ b/views/get-signup.jade
@@ -17,7 +17,7 @@ block content
               input.form-control(type="password", id="password", name="password", placeholder="设置您的密码")
             if error
               div.alert.alert-warning 您的邮箱已被占用
-            input(type="submit", class="btn btn-primary btn-block", value="Signup")
+            input(type="submit", class="btn btn-primary btn-block", value="注册")
           div.text-center(style="margin-top: 15px;")
             small: a(href="/signup/resend-verification") 重新发送认证邮件
   script.
